# swing-trade

./: PHASE_0_OBSERVATION.md
ibkr_bot/: .env.example  .gitignore  README.md  config.py  connection.py  executor.py  logging_config.py  main.py  pyproject.toml  scheduler.py  state.py  strategy.py
ibkr_bot/tests/: conftest.py  test_executor_mock.py  test_state.py  test_strategy.py
