[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ibkr_bot"
version = "0.1.0"
description = "Phase 0 paper-trading skeleton for Interactive Brokers (operational plumbing, trivial strategy)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ib_async>=1.0.3",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "structlog>=24.1",
    "pandas_market_calendars>=4.4",
    "pytz>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "freezegun>=1.4",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["config.py", "connection.py", "state.py", "strategy.py", "executor.py", "scheduler.py", "main.py", "logging_config.py", "__init__.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
